# MusicGenrePredictor

./: .gitattributes  .gitignore  MODEL.MD  MODEL.md  MusicGenrePredictor.7z  README.md  REPORT.md  pyproject.toml  render.yaml  requirements.txt  setup.py  yt_genre.py
MLP_train/: train.py
Train/: main.py
Train/configs/: config.yaml
Train/data/: __init__.py  dataset.py
Train/engine/: __init__.py  evaluate.py  train.py
Train/model/: __init__.py  model.py  transformer_parms.pth
Train/utils/: __init__.py  config.py  logger.py  seed.py
Transformer_predict/: mlp_parms.pth  predict.py
Transformer_train/: TransformerModel.py  log_basic.py  train.py  x_data.npy  y_data.npy
assets/MLP_train/: mlp_parms.pth  train.py
assets/Transformer_predict/: predict.py
assets/Transformer_train/: TransformerModel.py  log_basic.py  train.py
backend/: config.yaml
backend/DCBOT/: __init__.py  activate.py  processFunc.py
backend/core/: __init__.py  audio.py  charts_mpl.py  config.py  model.py  transformer_parms.pth
frontend/: DESIGN.md  main.py
frontend/ui/: charts_qt.py  worker.py
web/: __init__.py  app.py
web/static/: index.html  main.js  style.css
